style: Fix spacing of links
Give links spacings appropriate to their areas

--- a/index.css
+++ b/index.css
@@ -42,6 +42,10 @@ img {
 
 /* Tab Settings */
 
+#sect-account input {
+    margin: 0 0 0.625em 0;
+}
+
 #sect-account #account-sw-line {
     display: flex;
     flex-direction: row;
@@ -173,6 +177,7 @@ ul {
     .header ul {
         margin: 0;
         padding: 0;
+        gap: 0;
         list-style: none;
         overflow: hidden;
         background-color: var(--color-background);
@@ -296,6 +301,7 @@ ul {
     .header ul {
         margin: 0;
         padding: 0;
+        gap: 0;
         list-style: none;
         overflow: hidden;
         background-color: var(--color-background);
